# centrepoint

./: .$workflow.drawio.bkp  .coverage  .gitignore  README.md  cli_template  folder-structure  pyproject.toml  workflow.drawio
.github/workflows/: ci.yml
scripts/: download_data.py  test_auth.py  test_data_access.py  test_dwh-build.py  test_filtered_gyro.py  test_load-data.py  test_plot_2nd_chunk.py  test_plot_first_chunk.py  test_sensor_loader.py  test_studies.py  test_subjects.py
src/centrepoint/: __init__.py  auth.py  main.py
src/centrepoint/api/: base.py  data_access.py  studies.py  subjects.py
src/centrepoint/cli/: build_datawarehouse.py  download.py  download_data.py  filter_calc_resultant.py  filter_gyro.py  list_subjects.py  process_dwh.py
src/centrepoint/dwh/: creator.py  filter_calc_resultant.py  filter_gyro.py  processor.py
src/centrepoint/models/: data_access.py  study.py  subject.py
src/centrepoint/utils/: files.py  load.py  paginate.py  sensor_loader.py
tests/: conftest.py  test_cli_smoke.py  test_creator.py  test_data_access_api.py  test_processor.py  test_subjects_api.py
tests/api/: test_auth.py  test_base.py  test_studies_api.py
tests/cli/: test_build_datawarehouse.py  test_download_data.py  test_list_subjects.py  test_process_dwh.py
tests/dwh/: test_creator.py  test_processor.py
tests/utils/: test_files.py  test_paginate.py
