[project]
name = "centrepoint"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MelaroJ", email = "melarojake@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "duckdb>=1.2.2",
    "fastavro>=1.10.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.1",
    "polars>=1.26.0",
    "pydantic>=2.11.0",
    "rich>=13.9.4",
    "typing>=3.10.0.0",
]

[project.scripts]
cpapi = "centrepoint.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/centrepoint"]
