[project]
name = "centrepoint"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MelaroJ", email = "melarojake@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "duckdb>=1.2.2",
    "fastavro>=1.10.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.1",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.0",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "typing>=3.10.0.0",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
download-data = "centrepoint.cli.download_data:main"
build-dwh = "centrepoint.cli.build_datawarehouse:main"
process-dwh = "centrepoint.cli.process_dwh:main"
list-subjects = "centrepoint.cli.list_subjects:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/centrepoint"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short --durations=10 --strict-markers --cov=src/centrepoint --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "asyncio: mark a test as async and run it in an event loop"
]
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

